--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>
 		John Asper
 	</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="styles/main.css"/>
 </head>
 <body>
