Changes img tag to request with https

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id='container'>
 		<div id='mainimage'>
-			<img id='mainimageimg' src='http://www.cs.cornell.edu/jeh/images/CS2_2line_4c.gif' alt='Cornell CS logo'></img>
+			<img id='mainimageimg' src='https://www.cs.cornell.edu/jeh/images/CS2_2line_4c.gif' alt='Cornell CS logo'></img>
 		</div>
 		<div id='maintext'>
 			<h1 id='mainname'>
