--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="styles/main.css"/>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"
+  		integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  		crossorigin="anonymous"></script>
+  	<script src="scripts/main.js"></script>
 </head>
 <body>
 	<div id='container'>
