--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</div>
 	<div class="container-fluid">
 		<section id="main">
-			<div class="col-xs-6" id="education">
+			<div class="col-xs-12 col-md-6" id="education">
 				<h2>Education</h2>
 				<ul>
 					<li>
@@ -37,7 +37,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="col-xs-6" id="interests">
+			<div class="col-xs-12 col-md-6" id="interests">
 				<h2>Interests</h2>
 				<ul>
 					<li>
@@ -65,26 +65,26 @@
 			<div class="col-xs-12" id="projects">
 				<h2>Projects</h2>
 				<ul>
-					<li class="col-xs-6">
+					<li class="col-xs-12 col-md-6">
 						<a href="http://www.kongregate.com/games/teresali/gravity"><h3>Gravity</h3></a>
 						<p>
 							Implemented for Cornell CS 4154 in Fall 2015, in a group of 6, Gravity is a level based game where the player navigates an automatically scrolling level by controlling the gravity on their ball.
 						</p>
 					</li>
-					<li class="col-xs-6">
+					<li class="col-xs-12 col-md-6">
 						<h3>Dispossessed</h3>
 						<p>
 							Implemented for Cornell CS 3152 in Spring 2015, in a group of 6, Dispossessed is a top down shooter where the only way to get weapons is to possess your enemies.
 						</p>
 					</li>
 					<div class="clearfix"></div>
-					<li class="col-xs-6">
+					<li class="col-xs-12 col-md-6">
 						<a href="https://github.com/AgentX1994/AudioEffects"><h3>Audio Effects + Wav File Opener</h3></a>
 						<p>
 							A personal project to learn how the .wav file format works by implementing a C++ class that can open and save .wav files. This project was later extended with a simple implementation of a low pass audio filter.
 						</p>
 					</li>
-					<li class="col-xs-6">
+					<li class="col-xs-12 col-md-6">
 						<a href="https://github.com/AgentX1994/OpenGLRenderer"><h3>OpenGL Renderer</h3></a>
 						<p>
 							A personal project to learn C++ by using OpenGL to render a moving square with a simple motion blur shader.
