Adds animation, makes background image fixed
Adds a fadeIn to teh main header h1, and slideDown's to the #main>div
sections.

--- a/index.html
+++ b/index.html
@@ -70,12 +70,14 @@
 						<p>
 							Implemented for Cornell CS 4154 in Fall 2015, in a group of 6, Gravity is a level based game where the player navigates an automatically scrolling level by controlling the gravity on their ball.
 						</p>
+						<p> Written in HTML5 and Javascript, using the <a href="https://phaser.io/">Phaser game framework</a>. </p>
 					</li>
 					<li class="col-xs-12 col-md-6">
 						<h3>Dispossessed</h3>
 						<p>
 							Implemented for Cornell CS 3152 in Spring 2015, in a group of 6, Dispossessed is a top down shooter where the only way to get weapons is to possess your enemies.
 						</p>
+						<p> Written in Java using the <a href="https://libgdx.badlogicgames.com/">LibGDX framework</a>.</p>
 					</li>
 					<div class="clearfix"></div>
 					<li class="col-xs-12 col-md-6">
@@ -83,12 +85,14 @@
 						<p>
 							A personal project to learn how the .wav file format works by implementing a C++ class that can open and save .wav files. This project was later extended with a simple implementation of a low pass audio filter.
 						</p>
+						<p>Written in C++, using no external libraries or frameworks (other than AudioQueues to play the audio).</p>
 					</li>
 					<li class="col-xs-12 col-md-6">
 						<a href="https://github.com/AgentX1994/OpenGLRenderer"><h3>OpenGL Renderer</h3></a>
 						<p>
 							A personal project to learn C++ by using OpenGL to render a moving square with a simple motion blur shader.
 						</p>
+						<p> Written in C++ using OpenGL, GLFW3, and GLM.</p>
 					</li>
 				</ul>
 			</div>
